WebCore/rendering/RenderProgress.h
@@ -36,6 +36,8 @@ public:
 
     double position() const { return m_position; }
     double animationProgress() const;
+    double animationStartTime() const { return m_animationStartTime; }
+
     bool isDeterminate() const;
 
     HTMLProgressElement* progressElement() const;
